# taksworks

./: .gitignore  Image.hs  Main.hs  Render.hs  Type.hs  taksworks.cabal
deploy/: lighttpd.conf  run  taksworks.sh
static/: stylesheet.css
